fix z-index bug

--- a/www-develop/css/style.css
+++ b/www-develop/css/style.css
@@ -8,7 +8,6 @@
     height: 100%;
     left: 0;
     top: 0;
-    z-index: -5;
 }
 
 .relative {
@@ -17,7 +16,6 @@
 
 .flexslider {
     border: 0;
-    position: relative;
     overflow: hidden;
     height: 100vh;
 }
@@ -37,5 +35,12 @@
 
 .flex-control-nav {
     bottom: 50px;
-    z-index: 100;
+    z-index: 10;
 }
+
+.absolute-front {
+    z-index: 100;
+    position: absolute;
+}
+
+
